Null dereference loading Blink layout test editing/execCommand/insert-html-to-document-element-crash.html https://bugs.webkit.org/show_bug.cgi?id=149294 <rdar://problem/22746657>

Patch by Jiewen Tan <jiewen_tan@apple.com> on 2015-10-26
Reviewed by Darin Adler.

Source/WebCore:

This is a merge of Blink r175019:
https://codereview.chromium.org/300143012

Test: editing/execCommand/insert-html-to-document-element-crash.html

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::removeRedundantStylesAndKeepStyleSpanInline):
check nullable value |element->parentNode()| before using it.

LayoutTests:

* editing/execCommand/insert-html-to-document-element-crash-expected.txt: Added.
* editing/execCommand/insert-html-to-document-element-crash.html: Added.

Canonical link: https://commits.webkit.org/168723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191604 268f45cc-cd09-0410-ab3c-d52691b4dbfc